src/objects/Hello_World__c.object
<CustomObject>
    <fields>
        <fullName>First_Hello_World__c</fullName>
        <label>First Hello World</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Hello_World__c</fullName>
        <label>Second Hello World</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Hell_World__c</fullName>
        <label>Third Hello World</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Hello World</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hello World Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hello Worlds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>